@@ -1,0 +1,26 @@
+<?php
+/*<wikitext>
+{| border=1
+| <b>File</b> || FormProcBaseClass.php
+|-
+| <b>Revision</b> || $Id$
+|-
+| <b>Author</b> || Jean-Lou Dupont
+|}<br/><br/>
+ 
+== Purpose==
+Provides a useful base class for form processing classes.
+
+== Features ==
+
+
+== History ==
+
+== Code ==
+</wikitext>*/
+
+class FormProcBaseClass extends ExtensionClass
+{
+	
+}
+?>
