@@ -78,4 +78,9 @@ REL1_10_4:
 -- Addresses 'Special:Listusers' special page issue
 - Enhanced 'SpecialPagesManager' extension with a standard MW special for updating the
   BizzWiki special pages by reading the filesystem '/SpecialPages' directory.
-  
+ =========
+ REL1_10_5:
+ - FileManager: Added PHP error suppression for file_get_contents
+ - FormProc: added functionality enabling defining a class for form processing
+ - Added BizzWiki release identifier in global define 'BIZZWIKI'
+ - 
